pages/mesosphere/dcos/1.10/release-notes/open-source-attribution/index.md
---
layout: layout.pug
title: Mesosphere DC/OS Open Source Attribution
menuWeight: 100
excerpt:

---





Below is a list of third party open source software which is provided by Mesosphere in connection with Mesosphere DC/OS.

<table class="table">
		<tr>
			<th>Software</th>
			<th>License</th>
		</tr>
    <tr>
			<td>dcos-ca</td>
			<td><a href="https://github.com/cloudflare/cfssl/blob/master/LICENSE">Cloudflare CFSSL License</a></td>
		</tr>
		<tr>
			<td>dcos-diagnostics</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>adminrouter</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>boost-system</td>
			<td><a href="http://www.boost.org/LICENSE_1_0.txt">Boost Software License, Version 1.0</a></td>
		</tr>
		<tr>
			<td>boto</td>
			<td><a href="https://github.com/weapp/boto/blob/master/LICENSE.txt">MIT License</a></td>
		</tr>
		<tr>
			<td>cosmos</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>curl</td>
			<td><U><FONT COLOR="#0000FF"><A HREF="https://curl.haxx.se/docs/copyright.html">https://curl.haxx.se/docs/copyright.html</A></U></td>
		</tr>
		<tr>
			<td>dcos-history-service</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>dcos-installer-ui</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>dcos-signal</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>dcos-ui</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>dnspython</td>
			<td><a href="https://github.com/rthalley/dnspython/blob/master/LICENSE">BSD-style license</a></td>
		</tr>
		<tr>
			<td>erlang</td>
			<td><U><FONT COLOR="#0000FF"><A HREF="http://www.erlang.org/EPLICENSE">http://www.erlang.org/EPLICENSE</A></U></td>
		</tr>
		<tr>
			<td>exhibitor</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>flask</td>
			<td><a href="http://flask.pocoo.org/docs/0.11/license/#flask-license">Flask License</a></td>
		</tr>
		<tr>
			<td>hadoop</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>hdfs-mesos</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>java</td>
			<td><U><FONT COLOR="#0000FF"><A HREF="http://www.oracle.com/technetwork/java/javase/downloads/jre-6u21-license-159054.txt">http://www.oracle.com/technetwork/java/javase/downloads/jre-6u21-license-159054.txt</A></U></td>
		</tr>
		<tr>
			<td>libevent</td>
			<td><a href="http://libevent.org/LICENSE.txt">Libvent License</a></td>
		</tr>
		<tr>
			<td>marathon</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>mesos</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>mesos-buildenv</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>mesos-dns</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>minuteman</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>ncurses</td>
			<td ALIGN=LEFT VALIGN=BOTTOM BGCOLOR="#FFFFFF"><a href="https://github.com/weapp/boto/blob/master/LICENSE.txt">MIT License</a></td>
		</tr>
		<tr>
			<td>openssl</td>
			<td><U><FONT COLOR="#0000FF"><A HREF="https://www.openssl.org/source/license.html">https://www.openssl.org/source/license.html</A></U></td>
		</tr>
		<tr>
			<td>python</td>
			<td><U><FONT COLOR="#0000FF"><A HREF="https://www.python.org/download/releases/2.7/license/">https://www.python.org/download/releases/2.7/license/</A></U></td>
		</tr>
		<tr>
			<td>python-dateutil</td>
			<td><a href="https://github.com/clones/python-dateutil/blob/master/LICENSE">python-dateutil License</a></td>
		</tr>
		<tr>
			<td>python-docopt</td>
			<td><a href="https://github.com/weapp/boto/blob/master/LICENSE.txt">MIT License</a></td>
		</tr>
		<tr>
			<td>python-jinja2</td>
			<td><a href="https://github.com/pallets/jinja/blob/master/LICENSE">python-jinja2 License</a></td>
		</tr>
		<tr>
			<td>python-kazoo</td>
			<td><a href="https://www.mozilla.org/en-US/MPL/1.1/">Mozilla Public License 1.1</a></td>
		</tr>
		<tr>
			<td>python-markupsafe</td>
			<td><a href="https://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a></td>
		</tr>
		<tr>
			<td>python-passlib</td>
			<td><a href="https://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a></td>
		</tr>
		<tr>
			<td>python-pyyaml</td>
			<td><a href="https://github.com/weapp/boto/blob/master/LICENSE.txt">MIT License</a></td>
		</tr>
		<tr>
			<td>python-requests</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>python-retrying</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>six</td>
			<td><a href="https://github.com/weapp/boto/blob/master/LICENSE.txt">MIT License</a></td>
		</tr>
		<tr>
			<td>spartan</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>strace</td>
			<td><a href="https://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a></td>
		</tr>
		<tr>
			<td>toybox</td>
			<td><a href="https://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a></td>
		</tr>
		<tr>
			<td>zk-value-consensus</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>rexray</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
		<tr>
			<td>dvdcli</td>
			<td><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></td>
		</tr>
</table>

## Software Sources

The table below lists the Sources for the Free Software under GNU General Public License, and Mozilla Public License
utilized by Mesosphere DC/OS.


<table class="table">
    <tr>
        <th>Software</th>
        <th>Software Source</th>
        <th>License</th>
    </tr>
    <tr>
        <td>certifi</td>
        <td><a href="https://packages.d2iq.com/dcos/certifi-2017.11.5.tar.gz">https://packages.d2iq.com/dcos/certifi-2017.11.5.tar.gz</a></td>
        <td><a href="https://github.com/certifi/python-certifi/blob/2017.11.05/LICENSE">Mozilla Public License 2.0</a></td>
    </tr>
    <tr>
        <td>flake8-import-order</td>
        <td><a href="https://packages.d2iq.com/dcos/flake8-import-order-0.6.linux-x86_64.tar.gz">https://packages.d2iq.com/dcos/flake8-import-order-0.6.linux-x86_64.tar.gz</a></td>
        <td><a href="https://github.com/PyCQA/flake8-import-order/blob/0.6/COPYING">GNU Lesser General Public License v3.0</a></td>
    </tr>
    <tr>
        <td>libtool-ltdl</td>
        <td><a href="https://packages.d2iq.com/dcos/libtool-2.4.6.tar.gz">https://packages.d2iq.com/dcos/libtool-2.4.6.tar.gz</a></td>
        <td><a href="http://git.savannah.gnu.org/cgit/libtool.git/tree/HACKING?h=v2.4.6">GNU GENERAL PUBLIC LICENSE, Version 2</a></td>
    </tr>
    <tr>
        <td>vault</td>
        <td><a href="https://packages.d2iq.com/dcos/vault-0.5.3-zkfix.zip">https://packages.d2iq.com/dcos/vault-0.5.3-zkfix.zip</a></td>
        <td><a href="https://github.com/mesosphere/vault/blob/v0.5.3-zkfix/LICENSE">Mozilla Public License 2.0</a></td>
     </tr>
</table>
